--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "expo": "~52.0.35",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react-dom": "^18.3.1",
     "react-native": "0.76.7",
-    "react-native-gesture-handler": "^2.23.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "^3.16.7",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.6.0",
-    "react-native-web": "~0.19.13"
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-web": "^0.19.13",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
