--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
+    "@supabase/supabase-js": "^2.49.1",
     "expo": "~52.0.35",
     "expo-linear-gradient": "~14.0.2",
     "expo-splash-screen": "~0.29.22",
