--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.10.2",
     "react-native-web": "^0.19.13",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "expo-location": "~18.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
