--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.1.2",
     "@supabase/supabase-js": "^2.49.1",
+    "emailjs-com": "^3.2.0",
     "expo": "~52.0.35",
     "expo-dev-client": "~5.0.19",
     "expo-device": "~7.0.3",
